# network-manager-amneziawg

./: .clang-format  .clang-format-ignore  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  config.h.cmake  configure.ac  network-manager-amneziawg.doap  nm-amneziawg-service.conf  nm-amneziawg-service.name.in
.github/workflows/: ci.yml  release.yml
appdata/: network-manager-amneziawg.metainfo.xml.in
auth-dialog/: main.c  nm-openvpn-auth-dialog.py
examples/dbus/: dbus.py
po/: POTFILES.in  de.po  en_GB.po  ru.po  zh_CN.po
properties/: gresource.xml  gtk-compat.h  nm-amneziawg-dialog.ui  nm-amneziawg-editor-plugin.c  nm-amneziawg-editor-plugin.h  nm-amneziawg-editor.c  nm-amneziawg-editor.h  nm-vpn-plugin-amneziawg-editor.ver
scripts/: build.sh  check-style.sh  fix-pot-paths.sh
shared/: README  amneziawg.c  amneziawg.h  import-export.c  import-export.h  nm-default.h  nm-service-defines.h  utils.c  utils.h
shared/awg/: awg-config.c  awg-config.h  awg-connection-manager-dummy.c  awg-connection-manager-dummy.h  awg-connection-manager-external.c  awg-connection-manager-external.h  awg-connection-manager-netlink.c  awg-connection-manager-netlink.h  awg-connection-manager.c  awg-connection-manager.h  awg-device.c  awg-device.h  awg-nm-connection.c  awg-nm-connection.h  awg-validate.c  awg-validate.h
shared/nm-utils/: gsystem-local-alloc.h  nm-glib.h  nm-macros-internal.h  nm-shared-utils.c  nm-shared-utils.h  nm-test-utils.h  nm-vpn-plugin-macros.h  nm-vpn-plugin-utils.c  nm-vpn-plugin-utils.h
src/: nm-amneziawg-service.c
tests/: test-config-dual.conf  test-config-extended.conf  test-config-ipv4.conf  test-config-ipv6.conf  test-config-multi-peer.conf  test-main.c  test-netlink.c  test-netlink.conf
